third_party/move/move-compiler/tests/move_check/sponsored_function/function_definition.move
module 0x42::M {
    entry sponsored fun f1() {}
    public entry sponsored fun f2() {}
    sponsored fun f3() {}
}